src/static/room.css
/* ... */
.notifies-activity {
  color: #404040;
}

.sidebar-unread {
  display: none;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin: 3px;
  min-height: 0;
  max-height: 50%;
}
.sidebar-unread > h2 {
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  font: inherit;
  font-weight: bold;
}
.sidebar-unread .previews {
  overflow: auto;
}
.unread-message-line, .unread-message-line .unread-main {
  display: -webkit-flex;
  display: flex;
  line-height: 1.2;
}
.unread-message-line .unread-main {
  width: 100%;
  min-width: 0;
  padding-right: 0.25em;
  text-align: left;
  -webkit-align-items: baseline;
  -webkit-flex-shrink: 0;
  align-items: baseline;
  flex-shrink: 0;
}
.unread-message-line .nick, .unread-message-line .message-text {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.unread-message-line .nick {
  max-width: 25%;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
}
.unread-message-line .message-text {
  padding: 1px 0.25em 1px 0.25em;
  -webkit-flex-grow: 1;
  flex-grow: 1;
}
.unread-message-line .copy-placeholder {
  display: inline-block;
  border: 1px solid #808080;
  width: 1ex;
  height: 1ex;
  box-sizing: border-box;
}
.unread-message-line .copy-truncated::after {
  content: "\2026";
}
.unread-message-line .timer {
  padding: 1px 0;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  font-style: italic;
  color: #808080;
}
.unread-message-line button.unread-drop {
  position: relative;
  width: 1.2em;
  height: 1.2em;
  padding: 1px;
  box-sizing: content-box;
  outline-offset: -1px;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
}
.unread-message-line button.unread-drop > img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.unread-message.unread-message-hidden > .unread-message-line {
  display: none;
}
.unread-message:not(.unread-message-hidden) {
  border-left: 2px solid transparent;
  padding-left: 2px;
}
.unread-message.unread-message-ping {
  border-color: #c0c000;
}
.unread-message.unread-message-ping > .unread-message-line {
  background: rgba(192, 192, 0, 0.15);
}
.unread-message.unread-message-reply {
  border-color: #0040ff;
}
.unread-message.unread-message-reply > .unread-message-line {
  background: rgba(0, 64, 255, 0.15);
}
.unread-message.unread-message-activity {
  border-color: #808080;
}
.replies > .unread-message-line:not(.unread-message-hidden) {
  margin-top: 2px;
}

.sidebar.user-list-collapsed .sidebar-unread {
  max-height: none;
}

.content-wrapper.sidebar-pane .sidebar-unread.visible {
  display: -webkit-flex;
  display: flex;
}

.input-bar {
  display: -webkit-flex;
  display: flex;
  -webkit-align-content: stretch;
  align-content: stretch;
  width: 100%;
  margin: 5px 0;
  overflow: hidden;
  background: white;
  box-shadow: 0 0 5px #808080;
  line-height: 1.2;
  -webkit-transition: background 0.5s;
  transition: background 0.5s;
}
.input-bar .input-nick-sizer, .input-bar .input-nick,
.input-bar .input-message, .input-bar .input-message-sizer {
  display: block;
  margin: 0;
  border: 0;
  padding: 0;
  font: inherit;
}
.input-bar .input-info-cell {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
}
.input-bar .alert-container {
  display: table;
  margin: auto;
  padding: 1px 0;
  min-height: 1.2em;
  line-height: 0;
}
.input-bar .alert-container a {
  display: table-cell;
  width: 1.2em;
  height: 1.2em;
}
.input-bar .alert-container img {
  display: block;
  width: 100%;
  height: 100%;
}
.input-bar .input-nick-cell {
  position: relative;
}
.input-bar .input-nick-sizer {
  display: inline-block;
  padding: 1px 2px;
  white-space: pre;
  min-height: 1.2em;
  vertical-align: bottom;
  color: transparent;
  background: #c0c0c0;
}
.input-bar .input-nick-sizer {
  -webkit-transition: background 0.1s linear;
  transition: background 0.1s linear;
}
.input-bar .input-nick {
  position: absolute;
  top: 1px;
  left: 2px;
  min-width: 100%;
  color: inherit;
  background: transparent;
}
.input-bar .input-message-cell {
  position: relative;
  -webkit-flex-grow: 1;
  flex-grow: 1;
  padding: 1px 0 1px 0.25em;
  -webkit-transition: background 0.1s;
  transition: background 0.1s;
}
.input-bar .input-nick-prompt {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  max-width: 100%;
  height: 100%;
  border: 1px solid #808080;
  padding-right: 0.25em;
  background: white;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  z-index: 10;
}
.input-bar .input-nick-prompt img {
  width: 1.2em;
  height: 1.2em;
  vertical-align: bottom;
}
.input-bar .input-group {
  position: relative;
}
.input-bar .input-message, .input-bar .input-message-sizer {
  width: 100%;
  color: inherit;
  background: transparent;
  overflow: hidden;
  resize: none;
}
.input-bar .input-message-sizer {
  position: absolute;
  top: 0;
  visibility: hidden;
}

.input-bar.offline .input-message-cell {
  background: rgba(128, 128, 128, 0.3);
}
.input-bar input, .input-bar textarea {
  outline: none;
}

.offscreen-alert {
  visibility: hidden;
  opacity: 0.5;
}
.offscreen-alert.visible {
  visibility: visible;
}
.offscreen-alert.ping {
  opacity: 1;
}

.message > .replies > .input-bar:first-child {
  margin-top: 3px;
}
.message > .replies > .input-bar:last-child {
  margin-bottom: 3px;
}

.message-box {
  position: relative;
  padding-left: 3.5em;
  overflow: auto;
}
.message-box.notimes {
  padding-left: 0;
}
.message-box.notimes .message > .line time {
  display: none;
}
.message-box.notimes .input-bar .input-info-cell {
  display: none;
}

.message-pane {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-y: scroll;
  overflow-x: auto;
}
/* ... */

